# Practice_Projects

ComputerSimulatorProject/: CMakeLists.txt  README.md
ComputerSimulatorProject/include/: cpu.h  ram.h
ComputerSimulatorProject/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kbd.cpp  main.cpp  ram.cpp
SimulatorOfOperations/: CMakeLists.txt  README.md
SimulatorOfOperations/include/: simulatorOperations.h
SimulatorOfOperations/src/: CMakeLists.txt  main.cpp  simulatorOperations.cpp
StephenPrata_chapter_9_1/: CMakeLists.txt  read.me
StephenPrata_chapter_9_1/include/: golf.h
StephenPrata_chapter_9_1/src/: CMakeLists.txt  golf.cpp  main.cpp
